<resources>
    <string name="app_name">게임 번역기</string>

    <string name="none">None</string>

    <string name="add_game">게임 추가</string>
    <string name="my_game">내 게임</string>
    <string name="search_game">게임 탐색</string>
    <string name="scene_charge">씬 충전</string>
    <string name="help">도움말</string>
    <string name="app_info">정보</string>
    <string name="searching">검색 중 입니다...</string>
    <string name="authing">인증 중 입니다...</string>
    <string name="error">오류!</string>
    <string name="info">안내</string>

    <string name="error_kakao_failed">카카오 로그인 세션을 열 수 없습니다.</string>
    <string name="error_network_not_connect">휴대폰이 네트워크에 연결되어 있지 않습니다.</string>
    <string name="error_network_auth">서버에 인증 할 수 없습니다.</string>
    <string name="error_google_load_error">구글 로그인을 사용 할 수 없습니다!</string>
    <string name="error_google_failed">구글 로그인에 실패했습니다.</string>
    <string name="error_firebase_failed">인증 세션이 잘못되었습니다.</string>

    <string name="main_sub_message1">앞으로 번역 할 수 있는 씬의 갯수 입니다.</string>
    <string name="game_register_activity_title">새 게임 등록</string>
    <string name="game_register_content">게임 번역기와 함께할 게임을 등록합니다.\n등록된 게임이 실행되면 게임 번역기가 실행되며\n상단에 번역 버튼 오버레이가 표시됩니다.</string>
    <string name="game_list_activity_title">설치된 앱</string>
    <string name="game_list_activity">게임 번역기는 특정 앱이 실행되면 같이 실행됩니다.\n게임을 선택하여 게임이 실행되면 번역기가\n작동 될 수 있도록 해 주세요.\n물론, 게임이 아니어도 됩니다.</string>
    <string name="game_list_error1">최소한 하나 이상의 게임을 선택 해주세요.</string>
    <string name="game_regi_comp">등록 되었습니다.</string>
    <string name="game_regi_comp_content">이제, 방금 선택한 앱들이 실행되면 게임 번역기는\n자동으로 실행 되어 번역 버튼을 오버레이 합니다.\n내 게임 목록으로 이동하여 확인해보세요.</string>
    <string name="game_regi_isadd">모두 게임만 선택했나요? 저희에게 알려주세요.</string>
    <string name="game_regi_empty">등록 할 수 있는 앱이 없습니다.</string>

    <string name='start_translate'>번역 시작</string>
    <string name="prepare_translate">번역 준비 안됨</string>

    <string name="welcome_title">어떤 게임이든\n어떤 언어든.</string>
    <string name="project_name">게임 번역기 프로젝트</string>

    <string name="update_property_failed">자원 정보를 업데이트 할 수 없습니다.</string>

    <string name="mygames_title">등록된 게임</string>
    <string name="mygames_content">아래 게임들이 실행되면 게임 번역기가 자동으로 실행됩니다.</string>
    <string name="mygames_empty">등록된 게임이 없습니다.</string>
    <string name="mygames_deleted">삭제되었습니다.</string>

    <string name="game_search_title">새 게임 탐색</string>
    <string name="game_search_content">휴대폰에 설치된 게임을 찾아봅니다.\n일부 게임은 탐색되지 않을 수 있습니다.</string>
    <string name="game_search_apps">탐색된 게임</string>
    <string name="game_search_apps_content">휴대폰에 설치된 게임들 입니다.\n탐색되지 않는 게임은 직접 등록해주세요.</string>
    <string name="game_search_empty">설치된 게임이 없습니다.</string>
    <string name="game_search_failed">필터 서버에 연결 할 수 없습니다.</string>

    <string name="kakao_app_key">3744dca611c49c9647f3bc23d9abbe12</string>
</resources>
