<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_status_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/main_remain_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textSize="42sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:textColor="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            app:layout_constraintLeft_toRightOf="@id/main_remain_size"
            app:layout_constraintBottom_toBottomOf="@id/main_remain_size"
            android:layout_marginStart="8dp"
            android:text="개"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textColor="@color/textColor"
            android:text="앞으로 번역 할 수 있는 씬의 갯수 입니다."
            android:textSize="12sp"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_status_view"
        app:layout_constraintBottom_toTopOf="@id/main_notifi_container"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_game_add"
                app:text="@string/add_game"
                app:symbol="@drawable/ic_add"
                />
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_my_game"
                app:text="@string/my_game"
                app:symbol="@drawable/ic_game"/>
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_game_search"
                app:text="@string/search_game"
                app:symbol="@drawable/ic_search"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_charge_coin"
                app:text="@string/scene_charge"
                app:symbol="@drawable/ic_cash"/>
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_help"
                app:text="@string/help"
                app:symbol="@drawable/ic_info"/>
            <kr.saintdev.pst.libs.views.ItemButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menu_app_info"
                app:text="@string/app_info"
                app:symbol="@drawable/ic_code"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/main_notifi_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/primaryTextColor">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/notifi_icon"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_notification_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notifi_icon"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textColor"
            android:text="@string/none"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>