<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/pkg_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/game_list_activity_title"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pkg_list_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/game_list_activity"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/pkg_list_title" />

    <View
        android:id="@+id/pkg_list_hr"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/pkg_list_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 로딩 텍스트 -->
        <TextView
            android:id="@+id/pkg_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching"
            android:textColor="@color/textColor"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <ListView
            android:id="@+id/pkg_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:choiceMode="multipleChoice"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="24dp"
            android:src="@drawable/ic_check_white"
            app:backgroundTint="@color/primaryGreen"
            app:fabSize="normal" />
    </RelativeLayout>
</LinearLayout>