<?xml version="1.0" encoding="utf-8"?>
<!-- Content layout -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/game_regi_comp"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_register_content"
        android:text="@string/game_regi_comp_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/textColor"
        android:lineSpacingMultiplier="1.5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regi_comp_icons"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/game_register_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_invader_white"/>
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_invader_white"/>
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_invader_white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/game_register_content"
        android:layout_margin="8dp"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_regi_isadd"
        app:layout_constraintTop_toBottomOf="@id/game_register_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:textColor="@color/textColor"
        android:buttonTint="@color/textColor"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_register_content"
        app:backgroundTint="@color/primaryGreen"
        app:pressedTranslationZ="8dp"
        android:src="@drawable/ic_check_white"
        app:fabSize="normal"/>
</android.support.constraint.ConstraintLayout>